<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:layout_width="0dp"
        android:id="@+id/image"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:padding="8dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/book_authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/no_authors"

            android:text="@string/book_authors"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/book_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/no_description"
            android:maxLines="2"
            android:text="@string/book_description" />
    </LinearLayout>


</LinearLayout>